--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     fluent_ui: ^3.12.0
     flutter:
         sdk: flutter
+    provider: ^6.0.3
 
 dev_dependencies:
     flutter_lints: ^2.0.0
