--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,20 @@ environment:
 
 dependencies:
     cupertino_icons: ^1.0.2
+    drift: ^1.7.1
     fluent_ui: ^3.12.0
     flutter:
         sdk: flutter
+    path: ^1.8.1
+    path_provider: ^2.0.11
     provider: ^6.0.3
+    sqlite3_flutter_libs: ^0.5.0
 
 dev_dependencies:
     flutter_lints: ^2.0.0
+    drift_dev: ^1.7.0
+    build_runner: ^2.1.11
+
     flutter_test:
         sdk: flutter
 
