--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,13 @@
 name: todo_desktop
 description: A new Flutter project.
 
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-    sdk: '>=2.17.6 <3.0.0'
+    sdk: ">=2.18.0 <3.0.0"
+    flutter: 3.3.0
 
 dependencies:
     cupertino_icons: ^1.0.2
